src/App.css
@import url('https://fonts.googleapis.com/css?family=Kreon|Lobster|Raleway:600,800');

.Quicksand-Text {
  color: #ffff;
  font-weight: 800;
  font-family: 'Raleway', sans-serif !important;
  text-align: top;
  text-transform: capitalize;
  text-indent: 50px;
  padding-top: 100px;
  font-size: 50px;
}

.navbar {
  border-bottom: 1px solid rgb(235, 104, 104);
}

.underline {
  border-bottom: 2px solid rgb(235, 104, 104);
}

.typing-text {
  font-family: 'Lobster', cursive;
  color: rgb(235, 104, 104);
  opacity: 0.9;
  font-size: 1.5em;
}

.text-capitalize {
  line-height: 2em;
  color: #dedfe4;
  font-family: 'Raleway', sans-serif;
  font-size: 1em;
}

#search-bar {
  font-family: 'Raleway', sans-serif;
  color: rgb(27, 26, 26);
  border: 3px solid rgba(44, 72, 142, 1);
  box-shadow: -2px -1px 20px -1px rgba(44, 72, 142, 1);
  background: #fff;
  border-radius: 50px;
}

.btn {
  color: #fff;
  border: rgba(44, 72, 142, 1);
  box-shadow: -2px -1px 20px 5px rgba(44, 72, 142, 1);
  padding: 0 20px 0 20px;
  border-radius: 50px;
  background: rgb(24, 23, 23);
}

.search-btn {
  border: 2px solid rgb(45, 67, 121);
  background: linear-gradient(to right, #1eb7fb, #7b44e3);
}

.search-btn:hover {
  border: 2px solid rgb(45, 67, 121);
}

.back-btn {
  background: linear-gradient(to right, #1eb7fb, #7b44e3);
}

.btn:hover {
  color: #fff;
  background: linear-gradient(to right, #1eb7fb, #7b44e3);
}

.vector-img {
  height: 80px;
  margin-top: -30px;
  margin-left: -120px;
}

.radio-button {
  font-family: 'Raleway', sans-serif;
  color: #dedfe4;
  font-size: 1em;
  backdrop-filter: contrast(80%);
  padding-left: 400px;
}

#logo {
  height: 20px;
}

footer {
  font-family: 'Raleway', sans-serif;
  background: rgb(235, 104, 104);
  color: #000;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  overflow: hidden;
}

.card {
  color: #000;
  background: linear-gradient(to right, #1eb7fb, #7b44e3);
}

.Kreon-Text {
  font-family: 'Kreon', serif !important;
}

@keyframes glow {
  from {
    text-shadow: 0 0 0.05em #ffddad, 0 0 0.1em #ffddad, 0 0 0.15em #7cd9ff,
      0 0 0.35em #7cd9ff, 0 0 0.4em #7cd9ff, 0 0 0.55em #7cd9ff,
      0 0 0.7em #7cd9ff;
  }
  to {
    text-shadow: 0 0 0.15em #fff, 0 0 0.25em #ffddad, 0 0 0.35em #5bd0ff,
      0 0 0.55em #5bd0ff, 0 0 0.65em #5bd0ff, 0 0 0.75em #5bd0ff,
      0 0 0.85em #5bd0ff;
  }
}

